<resources>
    <string name="app_name">Sicco Office</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="can_phe">Cần phê</string>
    <string name="cv_can_phe">Công văn cần phê</string>
    <string name="xu_ly">Xử lý</string>
    <string name="cv_xu_ly">Công văn xử lý</string>
    <string name="cac_loai">Các loại</string>
    <string name="option">Thiết lập</string>
    <string name="exit">Đăng xuất</string>
    <string name="cancel">Hủy</string>
    <string name="confirm_exit">Bản thử nghiệm đã hết hạn. Vui lòng cài đặt bản chính thức để tiếp tục sử dụng.</string>
    <string name="search">Tìm kiếm</string>
    <string name="approval">Phê</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="connect_error">Lỗi kết nối</string>
    <string name="internet_false">Không kết nối được tới server do server đang bảo trì hoặc điện thoại của bạn không bật kết nối gprs/3g/wifi.</string>
    <string name="retry">Thử lại</string>
    <string name="send">Gửi</string>
    <string name="insert_text">Nhập văn bản</string>
    <string name="convert_dispatch">Chuyển công văn thành công việc xử lý.</string>
    <string name="data_empty">Không có dữ liệu.</string>
    <string name="nguoi_xu_ly">Người xử lý:</string>
    <string name="nguoi_phe_duyet">Người phê duyệt:</string>
    <string name="nguoi_xem">Người xem:</string>
    <string name="sh_cong_van">Số hiệu:</string>
    <string name="trich_yeu">Trích yếu:</string>
    <string name="bao_cao"><u><b>D/s báo cáo xử lý:</b></u></string>
    <string name="chi_tiet_cong_van">Chi tiết công văn</string>
    <string name="dang_xu_ly_trong_han">Đang xử lý</string>
    <string name="dang_xu_ly_qua_han">Đang xử lý quá hạn</string>
    <string name="hoan_thanh">Hoàn thành</string>
    <string name="tam_dung">Tạm dừng</string>
    <string name="da_huy">Đã hủy</string>
    <string name="receive_task">Nhận công việc</string>
    <string name="received_task">Đã nhận công việc</string>
    <string name="received_task_success">Nhận công việc thành công</string>
    <string name="duoc_xem">Được xem</string>
    <string name="viec_duoc_xem">Việc được xem</string>
    <string name="hint_input_report_steer">Nhập chỉ đạo/báo cáo...</string>
    <string name="handler">Người xử lý:"</string>
    <string name="handler1">Người xử lý</string>
    <string name="time">Thời gian:"</string>
    <string name="date">Ngày:"</string>
    <string name="report">Báo cáo:"</string>
    <string name="sep">" / "</string>
    <string name="empty_content_report">Bạn chưa nhập nội dung</string>
    <string name="job_type">Loại công việc</string>
    <string name="from_date">Từ ngày</string>
    <string name="to_date">Đến ngày</string>
    <string name="status">Trạng thái</string>
    <string name="progress">Tiến độ</string>
    <string name="level">Mức độ</string>
    <string name="viewer">Người xem</string>
    <string name="department">Phòng ban</string>
    <string name="title">Tiêu đề</string>
    <string name="des">Mô tả</string>
    <string name="convert">Chuyển</string>
    <string name="everyday">Hàng ngày</string>
    <string name="execute">Thực hiện</string>
    <string name="normal">Bình thường</string>
    <string name="begin_progress">0%</string>
    <string name="msg_sending">"    Đang gửi</string>
    <string name="choose_status">Chọn trạng thái</string>
    <string name="need_approval">Cần phê</string>
    <string name="need_handle">Cần xử lý</string>
    <string name="handling">Đang xử lý</string>
    <string name="pause_handle">Tạm dừng xử lý</string>
    <string name="finish_handle">Kết thúc xử lý</string>
    <string name="chua_xu_ly">Chưa xử lý</string>
    <string name="da_xu_ly">Đã xử lý</string>
    <string name="tam_dung_xu_ly">Tạm dừng xử lý</string>
    <string name="all">Tất cả</string>
    <string name="file">Tệp đính kèm</string>
	<string name="date_handle">Ngày thực hiện</string>
	<string name="date_finish">Ngày kết thúc</string>
	<string name="priority">Mức ưu tiên</string>
    <string name="project">Dự án</string>
    <string name="choose_project">Chọn dự án</string>
    <string name="path_file">Đường dẫn file: "</string>
    <string name="title_null">Bạn chưa nhập tiêu đề</string>
    <string name="approval_null">Bạn chưa nhập nội dung</string>
    <string name="description_null">Bạn chưa nhập mô tả</string>
    <string name="date_handle_null">Bạn chưa nhập chọn ngày thực hiện</string>
    <string name="date_finish_null">Bạn chưa nhập chọn ngày kết thúc</string>
    <string name="handler_null">Bạn chưa chọn người xử lý</string>
    <string name="viewer_null">Bạn chưa chọn người xem</string>
    <string name="department_null">Bạn chưa chọn phòng ban</string>
    <string name="choose_viewer">Chọn người xem</string>
    <string name="choose_handler">Chọn người xử lý</string>
    <string name="choose_department">Chọn phòng ban phụ trách</string>
    <string name="set_date_handle">Đặt ngày thực hiện</string>
    <string name="set_date_finish">Đặt ngày kết thúc</string>
    <string name="set_priority">Đặt mức ưu tiên</string>
    <string name="confirm_delete">Xác nhận xoá</string>
    <string name="delete">Xoá</string>
    <string name="error_occured">Có lỗi xảy ra!</string>
    <string name="content_dialog_delete_task">Bạn có thực sự muốn xoá công việc: "</string>
    <string name="confirm">Xác nhận</string>
    <string name="content_dialog_task_change_status">"Bạn có thực sự muốn thay đổi trạng thái công việc: \""</string>
    <string name="content_dialog_task_update_rate">"Bạn có thực sự cập nhật tiến độ công việc: \""</string>
    <string name="content_dialog_task_update_task">"Bạn có muốn lưu thay đổi này?"</string>
    <string name="assign_task_new">Giao việc mới</string>
    <string name="detail_task">Chi tiết công việc</string>
    <string name="edit_task">Sửa công việc</string>
    <string name="low">Thấp</string>
    <string name="medium">Bình Thường</string>
    <string name="hight">Cao</string>
    <string name="ngaygiao">Ngày</string>
    <string name="hancuoi">Hạn cuối</string>
    <string name="approval_dispatch">Phê công văn</string>
    <string name="truong_nay_khong_duoc_de_rong">Trường này không được để rỗng.</string>
    <string name="enter_title">Nhập tiêu đề</string>
    <string name="cv_cac_loai">Công văn các loại</string>
    <string name="task">Tác vụ</string>
    <string name="file_notfound">Tệp đính kèm không khả dụng</string>
    <string name="viec_da_giao">Việc đã giao</string>
    <string name="viec_duoc_giao">Việc được giao</string>
    <string name="giao_viec">Giao việc</string>
    <string name="luu_lai">Lưu lại</string>
    <string name="chinh_sua_cong_viec">Chỉnh sửa công việc</string>
    <string name="duoc_giao">Được giao</string>
    <string name="danh_sach_viec">Danh sách việc</string>
    <string name="nguoi_thuc_hien">Người thực hiên:</string>
    <string name="du_an">Dự án:</string>
    <string name="attach">Đính kèm:</string>
    <string name="no_attach">Không có tệp đính kèm</string>
    <string name="choose_file">Chọn file</string>
    <string name="dang_boi">Đăng bởi:</string>
    <string name="noi_dung">Nội dung:</string>
    <string name="info_update_status">Bạn là người theo dõi công việc, nên không được cập nhật trạng thái công việc</string>
    <string name="info_update_rate">Bạn là người theo dõi công việc, nên không được cập nhật tiến độ công việc</string>
    <string name="not_update_status">Công việc đã hoàn thành bạn không thể cập nhật trạng thái.</string>
    <string name="not_update_rate">Công việc đã hoàn thành bạn không thể cập nhật tiến độ.</string>
    <string name="active">Thực hiện</string>
    <string name="inactive">Tạm dừng</string>
    <string name="complete">Hoàn thành</string>
    <string name="handle">Gửi xử lý/chuyển tiếp</string>
    <string name="steer_report">Báo cáo/Xử lý</string>
    <string name="change_status">Thay đổi trạng thái</string>
    <string name="job_transfer">Chuyển công việc</string>
    <string name="done">Xong</string>
    <string name="chose_user">Chọn người xử lý</string>
    <string name="chose_dipartment">Chọn phòng ban</string>
    <string name="choose_handle">Chọn người xử lý/chuyển tiếp</string>
    <string name="empty_handle">Bạn chưa chọn người xử lý/chuyển tiếp.</string>
    <string name="success">Thành công</string>
    <string name="action">Thực hiện công văn số hiệu "</string>
    <string name="default_value">Giá trị mặc định</string>
    <string name="list_handler">Danh sách người xử lý/chuyển tiếp</string>
    <string name="downloading">Đang tải: "</string>
    <string name="exit_download">Đang tải tệp tin, bạn có muốn hủy?</string>
    <string name="agree">Đồng ý</string>
    <string name="no">Không</string>
    <string name="waiting">Đang xử lý...</string>
    <string name="error_l">Lỗi! Vui lòng thử lại sau ít phút</string>
    <string name="file_error">Tệp tin bạn chọn không hợp lệ</string>
    <string name="delete_task">Xóa công việc</string>
    <string name="update_rate">Cập nhật tiến độ</string>
    <string name="api_get_dispatch_approval">http://office.sicco.vn/api_distpatch/approval_dispatch.php</string>
    <string name="api_get_dispatch_handle">http://office.sicco.vn/api_distpatch/handl_dispatch.php</string>
    <string name="api_get_dispatch_other">http://office.sicco.vn/api_distpatch/other_dispatch.php</string>
    <string name="api_get_all_user">http://office.sicco.vn/api_distpatch/list_users.php</string>
    <string name="api_get_deparment">http://office.sicco.vn/api_distpatch/departments.php</string>
    <string name="api_get_deparment_users">http://office.sicco.vn/api_distpatch/departments_users.php</string>
    <string name="api_get_steer_report">http://office.sicco.vn/api_distpatch/get_report_steer.php</string>
    <string name="api_get_steer_congvan_report">http://office.sicco.vn/api_distpatch/binhluancongvan.php</string>
    <string name="api_get_cv_duoc_xem">http://office.sicco.vn/api_distpatch/viecduocxem.php</string>
    <string name="api_chuyencongvan">http://office.sicco.vn/api_distpatch/chuyencongvan.php</string>
    <string name="api_phecongvan">http://office.sicco.vn/api_distpatch/phecongvan.php</string>
    <string name="api_send_report">http://office.sicco.vn/api_distpatch/send_report.php</string>
    <string name="api_send_handl_forward">http://office.sicco.vn/api_distpatch/guixuly.php</string>
    <string name="api_change_status">http://office.sicco.vn/api_distpatch/change_status.php</string>
    <string name="api_get_one_user">http://office.sicco.vn/api_distpatch/get_one_user.php</string>
    <string name="api_get_dispatch_type">http://office.sicco.vn/api_distpatch/dispatch_type.php</string>
    <string name="api_get_project">http://office.sicco.vn/api_distpatch/duan.php</string>
    <string name="api_get_assigned_task">http://office.sicco.vn/api_distpatch/danhsachviecdagiao.php</string>
    <string name="api_get_task">http://office.sicco.vn/api_distpatch/danhsachcongviec.php</string>
    <string name="api_get_cv_duoc_giao">http://office.sicco.vn/api_distpatch/dscongviecduocgiao.php</string>
    <string name="api_get_steer_report_task">http://office.sicco.vn/api_distpatch/binhluan.php</string>
    <string name="api_get_state">http://office.sicco.vn/api_distpatch/danhsachviecdagiao2.php</string>
    <string name="api_add_task">http://office.sicco.vn/api_distpatch/giaoviec.php</string>
    <string name="api_send_comment_task">http://office.sicco.vn/api_distpatch/gblcongviec.php</string>
    <string name="api_update_status">http://office.sicco.vn/api_distpatch/tdttcongviec.php</string>
    <string name="api_update_rate">http://office.sicco.vn/api_distpatch/capnhattiendo.php</string>
</resources>