<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/txtHandler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/handler"
        android:textColor="@color/item_title_color"
        android:layout_marginBottom="8dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@color/item_title_color"
        android:layout_marginBottom="8dp"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtContentReportSteer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report"
        android:layout_marginBottom="8dp"
        android:textColor="@color/item_title_color"
        android:textSize="16sp" />
    
    <TextView
        android:id="@+id/txtAttach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/attach"
        android:textColor="@color/item_title_color"
        android:textSize="16sp" />

</LinearLayout>