<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/actionbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionbar_size"
        android:background="@color/actionbar_color"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/actionbar_size"
            android:layout_height="@dimen/actionbar_size"
            android:background="@drawable/drawer_selector"
            android:clickable="true"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_back_white_48dp" />

        <TextView
            android:id="@+id/title_actionbar"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/actionbar_size"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/list_handler"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/listHandler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/handler"
        android:background="@color/white"
        android:padding="10dp"
        android:textSize="17sp"
        android:minHeight="100dp" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn_login_selector"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/done"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_btn_login_selector"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>