<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/actionbar_color" >

        <LinearLayout
            android:id="@+id/actionbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/actionbar_size"
            android:background="@color/actionbar_color"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/back"
                android:layout_width="@dimen/actionbar_size"
                android:layout_height="@dimen/actionbar_size"
                android:background="@drawable/drawer_selector"
                android:clickable="true"
                android:padding="16dp"
                android:src="@drawable/ic_arrow_back_white_48dp" />

            <TextView
                android:id="@+id/title_actionbar"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/actionbar_size"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/chose_user"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        <ExpandableListView
            android:id="@+id/listUser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:choiceMode="multipleChoice" >
        </ExpandableListView>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/connect_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/connect_error"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/internet_false"
                android:textSize="16sp" />

            <Button
                android:id="@+id/retry"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_btn_login_selector"
                android:text="@string/retry"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/done"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="10dp"
        android:background="@drawable/bg_btn_login_selector"
        android:text="@string/done"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

</LinearLayout>